# discord-radiobot

./: .gitignore  LICENSE  README.md  config.template.toml  pyproject.toml  radiobot.py  requirements.in  requirements.txt
.github/workflows/: coverage_and_lint.yml
