[project]
name = "discord-radiobot"
description = "A small Discord bot for setting up radios."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Sachaa-Thanasius", email = "111999343+Sachaa-Thanasius@users.noreply.github.com" }]

[project.urls]
Homepage = "https://github.com/SutaHelmIndustries/discord-radiobot"
"Bug Tracker" = "https://github.com/SutaHelmIndustries/discord-radiobot/issues"

[tool.ruff]
# Credit to @mikeshardmind for most of this setup.
line-length = 120
target-version = "py311"
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "Q003",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PD",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "NPY",
    "RUF",
]
ignore = [
    "G002",    # Erroneous issue with %-logging when logging can be configured for % logging.
    "S101",    # Use of assert here is a known quantity. Blame typing memes.
    "PLR2004", # Magic value comparison. May remove later.
    "SIM105",  # Suppressable exception. I'm not paying the overhead of contextlib.supress for stylistic choices.
    "C90",     # McCabe complexity memes.
    "PLR0913", # More than 5 arguments isn't a problem here.
    "ANN101",  # Type of self is implied.
    "PLR",     # Complexity things.
    # Recommended by ruff when using ruff format.
    "COM812",
    "COM819",
    "E501",
    "ISC001",
    "Q003",
]
unfixable = [
    "ERA", # Don't want erroneous deletion of comments.
]

[tool.ruff.isort]
lines-after-imports = 2
combine-as-imports = true

[tool.pyright]
include = ["radiobot.py"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
